--- a/css/index.html
+++ b/css/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arduino Remote Web</title>
-    <link rel='stylesheet' type='text/css' href='https://faber59.github.io/Piri_Web3/css/style.css' />
+    <link rel='stylesheet' type='text/css' href='https://faber59.github.io/webpirino/css/style.css' />
     <!-- <link rel='stylesheet' type='text/css' href='css/style.css' /> -->
 </head>
 <body>
